Done. Buttons à embellir

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,18 +11,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <title>The Counter</title>
 </head>
+
 <body>
     <main class="main">
-        <nav class="navBar">
-            <div class="title">
-                <h1>The ultimate counter</h1>
-            </div>
-        </nav>
+        <div class="title">
+            The Ultimate Counter
+        </div>
+        <div class="counter">
+            0
+        </div>
+        <div class="buttons">
+            <button class="button increase">Increase</button>
+            <button class="button reset">Reset</button>
+            <button class="button decrease">Decrease</button>
+        </div>
     </main>
     <footer id="footer">
         <p>
             © <strong>Amazing counter</strong> by <a href="https://www.linkedin.com/in/dandria/">Stéphane</a>.
         </p>
     </footer>
+    <script src="../app/app.js"></script>
 </body>
+
 </html>
