Style improved. Done.

--- a/html/index.html
+++ b/html/index.html
@@ -13,18 +13,21 @@
 </head>
 
 <body>
-    <main class="main">
-        <div class="title">
-            The Ultimate Counter
+    <main>
+        <div class="main">
+            <div class="title">
+                The Ultimate Counter
+            </div>
+            <div class="counter">
+                0
+            </div>
+            <div class="buttons">
+                <button class="button increase">Increase</button>
+                <button class="button reset">Reset</button>
+                <button class="button decrease">Decrease</button>
+            </div>
         </div>
-        <div class="counter">
-            0
-        </div>
-        <div class="buttons">
-            <button class="button increase">Increase</button>
-            <button class="button reset">Reset</button>
-            <button class="button decrease">Decrease</button>
-        </div>
+
     </main>
     <footer id="footer">
         <p>
