--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
     <title>The Counter</title>
@@ -34,7 +34,7 @@
             © <strong>Amazing counter</strong> by <a href="https://www.linkedin.com/in/dandria/">Stéphane</a>.
         </p>
     </footer>
-    <script src="../app/app.js"></script>
+    <script src="./app/app.js"></script>
 </body>
 
 </html>
